@@ -70,6 +70,7 @@ Eduardo Vieira
 Ernesto Gancedo
 François Vion
 Frédéric Bron
+Gianluca D.
 Hans Forbrich
 Hoang Nguyen
 Joe Neeman
